feat(ex1): refactor directory listing to procedural style with static method